--- a/gtk/src/ghb3.ui
+++ b/gtk/src/ghb3.ui
@@ -4941,6 +4941,26 @@ this setting is of little value here.</property>
                               </packing>
                             </child>
                             <child>
+                              <object class="GtkCheckButton" id="VideoHWDecode">
+                                <property name="label" translatable="yes">HW Decoding</property>
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="receives_default">False</property>
+                                <property name="events">GDK_POINTER_MOTION_MASK | GDK_POINTER_MOTION_HINT_MASK | GDK_BUTTON_PRESS_MASK | GDK_BUTTON_RELEASE_MASK</property>
+                                <property name="tooltip_text" translatable="yes">Use hardware decoding while transcoding.</property>
+                                <property name="halign">start</property>
+                                <property name="margin-start">2</property>
+                                <property name="draw_indicator">True</property>
+                                <signal name="toggled" handler="video_setting_changed_cb" swapped="no"/>
+                              </object>
+                              <packing>
+                                <property name="top_attach">1</property>
+                                <property name="left_attach">4</property>
+                                <property name="width">1</property>
+                                <property name="height">1</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkLabel" id="VideoProfileLabel">
                                 <property name="visible">True</property>
                                 <property name="can_focus">False</property>
